/develop
    + Bug fix.  BoundMapping.Assignables() did not work as expected when attempting to Scan()
        results from a database query that returned NULL for columns even if the destination struct
        field was a pointer.  The error was the previous implementation always follows and instantiates
        pointers so the Scan() was receiving a *T when it required a **T.

0.2.2
    + Add go.mod

0.2.1
    + No API changes.
    
0.2.0
    + Add Mapper, Mapping, BoundMapping
    + Add TypeInfo, TypeInfoCache
    + Add global TypeCache as an instance of TypeInfoCache.

0.1.2
    + Clean golint warnings; some small refactoring.

0.1.1
    + Refactoring and increase code coverage.

0.1.0
    + Add types:
        + Value - sets data to scalars, slices, and structs with type coercion if necessary.
        + Getter - acts as value lookup when filling structs.
        + Field - intermediate type for iterating struct fields.